Fix spacing between skills tags.

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -105,7 +105,8 @@ main {
 	}
 }
 
-.virtual-resume-segment {
+.skill-tags {
+	line-height: 30px;
 	.label {
 		background-color: #e3c5ac !important;
 	}
